Fixed some padding issues on front page, only visible on phone

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,8 @@ input, textarea {
 
 .opt-in {
   background-color: #e6e6e6;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 form {
